--- a/css/style.css
+++ b/css/style.css
@@ -40,15 +40,15 @@ header{
 }
 
 .logo{
-    font-size: 3rem;
+    font-size: 2rem;
     color: #b74b4b;
-    font-weight: 800;
+    font-weight: 1000;
     cursor: pointer;
-    transition: 0.5s ease;
+    transition: 0.3s ease;
 }
 
 .logo:hover{
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 nav a{
@@ -110,14 +110,14 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8rem;
+    gap: 6rem;
     background-color: black;
 }
 
 .home.home-content h1{
-    font-size: 6rem;
-    font-weight: 700;
-    line-height: 1.3;
+    font-size: 2rem;
+    font-weight: 200;
+    line-height: 1.4;
 }
 
 span{
@@ -125,27 +125,27 @@ span{
 }
 
 .home-content h3{
-    font-size: 4rem;
+    font-size: 3rem;
     margin-bottom: 1rem;
-    font-weight: 700;
+    font-weight: 900;
 }
 
-.home-img{
+.circle-img{
     border-radius: 50%;
 }
 
-.home-img img{
-    position: relative;
-    width: 32ww;
-    border-radius: 50%;
-    box-shadow: 0 0 50px solid #b74b4b;
-    cursor: pointer;
-    transition: 0.2s linear;
+.circle{
+  width: 160px;
+  height: 160px;
+  border-radius: 80%;
+  object-fit: cover; 
+  display: block;
 }
 
-.home-img img:hover{
+
+.circle-img img:hover{
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: 200;
 }
 
 .social-icons a{
